Fixed overflow on student assignments in todo and submitted

--- a/frontend/src/main/frontend/src/components/styles/StudentAss.css
+++ b/frontend/src/main/frontend/src/components/styles/StudentAss.css
@@ -14,6 +14,27 @@
 
 #assList {
     width: 100%;
+    height: 70vh;
+    overflow-y: scroll;
+}
+
+#assList::-webkit-scrollbar {
+    width: 20px;
+}
+
+#assList::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+#assList::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+#assList::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
 
 #assListItem {
