--- a/frontend/src/main/frontend/src/pages/StudentPages/styles/StudentCourseStyle.css
+++ b/frontend/src/main/frontend/src/pages/StudentPages/styles/StudentCourseStyle.css
@@ -27,7 +27,7 @@
     flex-grow: 1;
     padding: 2%;
     background-color: rgba(255, 255, 255, 0.5);
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .scp-component::-webkit-scrollbar {
